<resources>
    <string name="app_name">ProntoShop</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_product_found">No product Found!</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="label_zero_dollar">0.0$</string>
    <string name="label_sub_tax">Tax - 8%</string>
    <string name="label_total">Total Amount</string>
    <string name="payment_type_cash">CASH</string>
    <string name="payment_type_card">CARD</string>
    <string name="payment_type_paypal">paypal</string>
    <string name="clear_text">Clear</string>
    <string name="checkout_text">Checkout</string>
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="product_description">Product Description</string>
    <string name="qty">qty</string>
    <string name="delete">delete</string>
    <string name="dialog_title">dialog_title</string>
    <string name="customer_name">Customer Name</string>
</resources>
