<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context="com.example.dominik.prontoshop.ui.checkout.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_checkout_list_recyclerView"
            android:background="@android:color/transparent"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/fragment_checkout_list_emptyText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/primary"
            android:text="@string/no_product_found"
            android:padding="15dp"
            android:textStyle="italic"
            android:gravity="center"
            android:visibility="gone"
            android:fontFamily="sans-serif-condensed"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_sub_total"/>


            <TextView
                android:id="@+id/fragment_checkout_list_textView_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/label_zero_dollar"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_sub_tax"/>


            <TextView
                android:id="@+id/fragment_checkout_list_textView_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="@dimen/margin_padding_tiny"
                android:text="@string/label_zero_dollar"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/label_total"
                />


            <TextView
                android:id="@+id/fragment_checkout_list_textView_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="@dimen/margin_padding_tiny"
                android:text="@string/label_zero_dollar"/>


        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/fragment_checkout_radioGroup_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin_padding_tiny"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <RadioButton
            android:id="@+id/fragment_checkout_buttonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="true"
            android:text="@string/payment_type_cash"
            />

        <RadioButton
            android:id="@+id/fragment_checkout_buttonCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/payment_type_card"/>

        <RadioButton
            android:id="@+id/fragment_checkout_buttonPayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textAllCaps="false"
            android:text="@string/payment_type_paypal"/>



    </RadioGroup>

    <LinearLayout
        style="style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_tiny"
        android:layout_marginTop="@dimen/margin_padding_tiny"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_checkout_clearButton"
            style="@style/BottomBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_text"/>

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <Button
            android:id="@+id/fragment_checkout_"
            style="@style/BottomBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_text"/>



    </LinearLayout>


</LinearLayout>
