<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_small">

        <TextView
            android:id="@+id/list_product_productCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAllCaps="true"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_normal"
            />

        <TextView
            android:id="@+id/list_product_productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:text="@string/product_name"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_xnormal"
            />



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/product_image_height">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            />

        <ImageView
            android:id="@+id/list_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_image_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/product_description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_image_height"
            android:background="@drawable/gradient_background_product"/>
        
        <TextView
            android:id="@+id/list_product_productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_padding_small"
            android:background="@android:color/transparent"
            android:text="$19.19"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_huge"/>

        <ImageView
            android:id="@+id/list_product_addCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add_shopping_cart_white_24dp"
            android:scaleType="center"
            android:minHeight="36dp"
            android:minWidth="64dp"
            android:padding="@dimen/margin_padding_small"
            android:layout_margin="@dimen/margin_padding_small"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical"
            android:layout_alignBottom="@+id/list_product_addCartButton"
            android:layout_toLeftOf="@+id/list_product_productPrice"
            android:layout_toStartOf="@+id/list_product_productPrice">

            <TextView
                android:id="@+id/list_product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:maxLines="2"
                android:text=""
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"/>


        </LinearLayout>


    </RelativeLayout>
</LinearLayout>